--- a/src/views/Market/Market.css
+++ b/src/views/Market/Market.css
@@ -113,7 +113,7 @@
     font-size: 13px;
   }
 
-.form {
+.search-form {
     outline: 0;
     flex: 0.25;
     /* background-color: yellow; */
@@ -126,7 +126,7 @@
     /* border-radius: 4px; */
   }
   
-  .form > .textbox {
+  .search-form > .search-input {
       /* To remove outline when input is selected, */
     outline: 0; 
     height: 42px;
@@ -142,12 +142,12 @@
     border-radius: 4px 0 0 4px;
   }
   
-  .form > .textbox:focus {
+  .search-form > .search-input:focus {
     outline: 0;
     background-color: #FFF;
   }
   
-  .form > .button {
+  .search-form > .search-button {
     outline: 0;
     background: none;
     background-color: rgba(38, 50, 56, 0.8);
@@ -168,7 +168,7 @@
     border-radius: 0 4px 4px 0;
   }
   
-  .form > .button:hover {
+  .search-form > .search-button:hover {
     background-color: rgba(0, 150, 136, 0.8);
   }
 
