--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -78,6 +78,15 @@
     align-items: center;
 }
 
+
+
+/* sign up stuff */
+
+.avatar-image {
+    height: 50px;
+    width: 50px;
+}
+
 .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 40vmin;
