--- a/src/views/Market/Market.css
+++ b/src/views/Market/Market.css
@@ -61,7 +61,9 @@
             font-weight: 300;
         }
 
-        .icon-account-picture {
+        .account-picture {
+            width: 30px;
+            height: 30px;
 
         }
 
